Fixed Spacing Issues

--- a/styles.scss
+++ b/styles.scss
@@ -376,6 +376,7 @@ footer {
   }
   .intro-text {
     line-height: initial;
+    margin-top: 25px;
   }
   .movies__more {
     font-size: 1rem !important;
